[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/UI/button_presed.png" type="Texture" id=1]
[ext_resource path="res://Fonts/UbuntuMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/UI/button.png" type="Texture" id=3]
[ext_resource path="res://scenes/Wigets/Mobile/controls.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Pick" type="TouchScreenButton" parent="."]
position = Vector2( -32, -32 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Pick"]
margin_left = 10.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Pick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2( -32, -112 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Up"]
margin_left = 20.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2( -32, 48 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Down"]
margin_left = 8.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -112, -32 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Left"]
margin_left = 8.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 48, -32 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Right"]
margin_left = 2.0
margin_top = 20.0
margin_right = 66.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="TouchScreenButton" parent="."]
position = Vector2( -32, -260 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Done"]
margin_left = 8.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2( -112, -184 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Back"]
margin_left = 8.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TouchScreenButton" parent="."]
position = Vector2( 48, -184 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Next"]
margin_left = 8.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="TouchScreenButton" parent="."]
position = Vector2( -112, -260 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Shop"]
margin_left = 8.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="TouchScreenButton" parent="."]
position = Vector2( 48, -260 )
normal = ExtResource( 3 )
pressed = ExtResource( 1 )
visibility_mode = 1

[node name="Label" type="Label" parent="Items"]
margin_left = 2.0
margin_top = 20.0
margin_right = 66.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pick" to="." method="_on_Pick_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Items" to="." method="_on_Items_pressed"]
